[package]
name = "payment_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.1"
rust_decimal = { version = "1.36", features = ["serde"] }
rust_decimal_macros = "1.32"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
rust_decimal_macros = "1.32"
serde_json = "1.0"
